Fix for projects image on small screens

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -172,7 +172,8 @@ $white-ish: #c4c4c4;
 
   .cards {
     .card {
-      width: calc((100%/3) - 20px) !important;
+      width: 90% !important;
+      margin: 0 auto 25px !important;
     }
   }
   /*.sec3-h {
@@ -384,12 +385,19 @@ $white-ish: #c4c4c4;
       width: calc((100% - 40px) / 2);
     }
   }
-
+}
+@media screen and (min-width: 680px) {
   .product-img {
     max-height: 750px !important;
     max-width: 560px !important;
   }
   .h1 { font-size: 2.6em !important; }
+
+  #Section4 .cards {
+    .card {
+      width: calc((100%/3) - 20px) !important;
+    }
+  }
 }
 
 /* Products styles */
@@ -666,16 +674,21 @@ $white-ish: #c4c4c4;
 
   @media screen and (min-width: 425px) {
     max-width: 90%;
+  }
+
+  @media screen and (min-width: 1200px) {
     max-height: 380px;
   }
 
   .prj-left {
     background-color: #2d2a2a;
     height: 100%;
-    min-height: 350px;
     overflow: hidden;
     position: relative;
     width: 35%;
+    @media screen and (min-width: 1200px) {
+      min-height: 350px;
+    }
 
     img {
       left: -125px;
@@ -706,13 +719,17 @@ $white-ish: #c4c4c4;
 
     @media screen and (max-width: 1200px) {
       background-color: #fff;
-      margin: 10px auto;
+      margin: 18px auto;
       width: 95%;
+    }
+    @media screen and (max-width: 576px) {
+      //margin: auto !important;
     }
   }
 
   @media screen and (max-width: 1200px) {
     flex-direction: column-reverse;
+    padding: 15px 0;
   }
 
   .prj-right {
@@ -794,7 +811,7 @@ $white-ish: #c4c4c4;
       z-index: 1;
     } }
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 1200px) {
     flex-direction: column;
   }
 }
